// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-jNwOwP jbfrhx"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
Array [
  <span
    className="sc-jNwOwP jbfrhx"
  >
    Default color is Bulma
  </span>,
  <span
    className="sc-jNwOwP bTPLDI"
    color="piccolo.100"
  >
    Piccolo
  </span>,
  <span
    className="sc-jNwOwP dSMNbu"
    color="trunks.100"
  >
    Trunks
  </span>,
  <span
    className="sc-jNwOwP kVSPek"
    color="krillin.100"
  >
    Krillin
  </span>,
]
`;

exports[`Caption renders font weights 1`] = `
Array [
  <span
    className="sc-jNwOwP jbfrhx"
  >
    Default font-weight is bold
  </span>,
  <span
    className="sc-jNwOwP eaZAWs"
  >
    Font-weight is regular
  </span>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <span
    className="sc-jNwOwP jbfrhx"
  >
    Span is a default tag
  </span>,
  <p
    className="sc-jNwOwP jbfrhx"
  >
    Paragraph tag
  </p>,
  <label
    className="sc-jNwOwP jbfrhx"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <span
    className="sc-jNwOwP jbfrhx"
  >
    Default font-size is 10px
  </span>,
  <span
    className="sc-jNwOwP dDfYSI"
    size={9}
  >
    Size is 9px
  </span>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <span
    className="sc-jNwOwP jbfrhx"
  >
    Text-align is not specified
  </span>,
  <span
    className="sc-jNwOwP kkXJNO"
  >
    Centered text
  </span>,
  <span
    className="sc-jNwOwP ewpoiV"
  >
    Right alignment
  </span>,
]
`;
